# polymarket-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
cli/: main.py
config/: markets.yaml  risk.yaml  settings.yaml  strategy.yaml  telegram.yaml
src/: config.py  db.py  logger.py
src/alerts/: telegram.py
src/analytics/: daily_report.py  metrics.py  replay.py
src/auth/: eip712.py  hmac_signer.py  wallet.py
src/data/: clob_client.py  gamma_client.py  price_tracker.py  ws_client.py
src/execution/: paper_engine.py  position_tracker.py
src/strategy/: confidence.py  spike_fade.py
tests/: test_clob_client.py  test_confidence.py  test_config.py  test_paper_engine.py  test_price_tracker.py  test_spike_fade.py
